--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "moconut_dependanz"
+name = "moconut"
 version = "0.0.1"
 authors = [
     { name = "Danzel Serrano", email = "danzel.serrano@gmail.com" }
