--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "moconut"
-version = "0.0.1"
+version = "0.0.4"
+dependencies = ['torch']
 authors = [
     { name = "Danzel Serrano", email = "danzel.serrano@gmail.com" }
 ]
